--- a/src/components/mdx/GoodreadsGrid.astro
+++ b/src/components/mdx/GoodreadsGrid.astro
@@ -4,10 +4,21 @@ import { Image } from 'astro:assets';
 
 const { gridMarginTop = 4, titleMarginTop = 1, ratingMarginBottom = 4, filterYear, filterTitles } = Astro.props;
 
+const TIMEOUT = 200000; // Set timeout to 200 seconds
+
+const fetchWithTimeout = async (url, options = {}, timeout = TIMEOUT) => {
+  const controller = new AbortController();
+  const id = setTimeout(() => controller.abort(), timeout);
+  const response = await fetch(url, { ...options, signal: controller.signal });
+  clearTimeout(id);
+  return response;
+};
+
+
 const GOODREADS_URL =
   'https://www.goodreads.com/review/list_rss/152185079?key=_0elm4i3w7r24rhlGCl4tPmj0V9u5Jla71mdKQ_MBPUwhSys&shelf=read'
 
-const response = await fetch(GOODREADS_URL)
+const response = await fetchWithTimeout(GOODREADS_URL)
 const data = await response.text()
 const result = await xml2js.parseStringPromise(data)
 let books = result.rss.channel[0].item.map((item: any) => {
