--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -16,5 +16,32 @@ import SocialIcons from './SocialIcons.astro'
       </div>
       <SocialIcons links={SOCIAL_LINKS} />
     </div>
+    <div id="wcb" class="carbonbadge flex justify-left"></div>
   </Container>
 </footer>
+
+<script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const wcbElement = document.getElementById('wcb');
+    const observer = new MutationObserver(() => {
+      if (document.documentElement.classList.contains('dark')) {
+        if (wcbElement) {
+          wcbElement.classList.add('wcb-d');
+        }
+      } else {
+        if (wcbElement) {
+          wcbElement.classList.remove('wcb-d');
+        }
+      }
+    });
+
+    observer.observe(document.documentElement, { attributes: true, attributeFilter: ['class'] });
+
+    if (document.documentElement.classList.contains('dark')) {
+      if (wcbElement) {
+        wcbElement.classList.add('wcb-d');
+      }
+    }
+  });
+</script>
