style: add flex to website carbon badge

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -16,7 +16,11 @@ import SocialIcons from './SocialIcons.astro'
       </div>
       <SocialIcons links={SOCIAL_LINKS} />
     </div>
-    <div id="wcb" class="carbonbadge flex justify-left"></div>
+    <div
+      class="mt-2 flex flex-col items-center justify-center gap-y-2 sm:flex-row sm:justify-between sm:mt-0"
+    >
+      <div id="wcb" class="carbonbadge flex justify-center"></div>
+    </div>
   </Container>
 </footer>
 
