--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,6 +3,7 @@ import Container from '@/components/Container.astro'
 import Link from '@/components/Link.astro'
 import MobileMenu from '@/components/ui/mobile-menu'
 import { ModeToggle } from '@/components/ui/mode-toggle'
+import { MoreDropdown } from '@/components/ui/more-dropdown'
 import { NAV_LINKS, SITE } from '@/consts'
 import { Image } from 'astro:assets'
 import logo from '../../public/static/logo.png'
@@ -37,6 +38,7 @@ import logo from '../../public/static/logo.png'
           }
         </nav>
         <MobileMenu client:load transition:persist />
+        <MoreDropdown client:load transition:persist />
         <ModeToggle client:load transition:persist />
       </div>
     </div>
