--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,7 +33,7 @@ const { title, description, image } = Astro.props
       gtag("config", "G-Q095PB1G6R");
     </script>
     <Head
-      title={`${title} | ${SITE.TITLE}`}
+      title={`${title} – ${SITE.TITLE}`}
       description={description}
       image={image}
     />
