--- a/src/components/SocialIcons.astro
+++ b/src/components/SocialIcons.astro
@@ -20,6 +20,7 @@ const iconMap = {
   Bluesky: 'tabler:brand-bluesky',
   Threads: 'tabler:brand-threads',
   Mastodon: 'tabler:brand-mastodon',
+  Pixelfed: 'ri:pixelfed-line',
   Instagram: 'lucide:instagram',
   Spotify: 'tabler:brand-spotify',
   Lastfm: 'tabler:brand-lastfm',
