--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -19,7 +19,7 @@ import logo from '../../public/static/logo.png'
         href="/"
         class="flex flex-shrink-0 items-center gap-2 text-xl font-semibold transition-colors duration-300 hover:text-primary"
       >
-        <Image src={logo} alt="Logo" class="size-10" width="36" height="36" style="object-fit: contain;" />
+        <Image src={logo} alt="" class="size-10" width="36" height="36" style="object-fit: contain;" />
         <h1 class="font-extrabold">
           {SITE.TITLE}
         </h1>
