--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,11 +26,13 @@
     --primary-foreground: 0 0% 98%;
     --secondary: 0 0% 80.1%;
     --secondary-foreground: 0 0% 9%;
+    --tertiary: 247 100% 66%;
+    --tertiary-foreground: 0 0% 100%;
     --muted: 0 0% 80.1%;
     --muted-foreground: 0 0% 45.1%;
     --accent: 0 0% 80.1%;
     --accent-foreground: 0 0% 9%;
-    --additive: 112 50% 36%;
+    --additive: 276 41% 45%;
     --additive-foreground: 0 0% 9%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
@@ -44,6 +46,8 @@
     --primary-foreground: 0 0% 9%;
     --secondary: 0 0% 14.9%;
     --secondary-foreground: 0 0% 98%;
+    --tertiary: 247 100% 66%;
+    --tertiary-foreground: 0 0% 100%;
     --muted: 0 0% 14.9%;
     --muted-foreground: 0 0% 63.9%;
     --accent: 0 0% 14.9%;
