--- a/src/components/mdx/WebsiteCarbon.astro
+++ b/src/components/mdx/WebsiteCarbon.astro
@@ -26,79 +26,18 @@ const dict = {
 const ps = dict.en;
 ---
 
-<style>
-  .carbonbadge {
-    --b1: #0e11a8;
-    --b2: #00ffbc;
-    font-size: 15px;
-    text-align: center;
-    color: var(--b1);
-    line-height: 1.15;
-  }
-  .carbonbadge a {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    font-size: 1em;
-    line-height: 1.15;
-    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-    text-decoration: none;
-    margin: 0.2em 0;
-    padding: 0.3em 0.5em;
-    border: 0.13em solid var(--b2);
-    border-radius: 0.3em 0 0 0.3em;
-    background: #fff;
-    border-right: 0;
-    min-width: 8.2em;
-    color: var(--b1);
-  }
-  .carbonbadge sub {
-    vertical-align: middle;
-    position: relative;
-    top: 0.3em;
-    font-size: 0.7em;
-  }
-  .carbonbadge .link {
-    border-radius: 0 0.3em 0.3em 0;
-    border-left: 0;
-    background: var(--b1);
-    color: #fff;
-    font-weight: 700;
-    border-color: var(--b1);
-  }
-  .carbonbadge .link.dark {
-    color: var(--b1);
-    background: var(--b2);
-    border-color: var(--b2);
-  }
-  .carbonbadge .percentage {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    font-size: 1em;
-    line-height: 1.15;
-    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-    text-decoration: none;
-    margin: 0.2em 0;
-  }
-  .carbonbadge .percentage.dark {
-    color: #fff;
-  }
-</style>
-
-<div class="carbonbadge">
-  <div>
+<div class="text-xs text-center text-gray-800 dark:text-gray-200">
+  <div class="inline-flex items-center justify-center">
     <a
-      class="text-gray-500 dark:text-gray-600"
+      class="inline-flex items-center justify-center text-gray-800 dark:text-gray-200 border border-[#02ffb4] border-2 border-r-0 dark:border-[#02ffb4] bg-white dark:bg-gray-800 rounded-l-md px-2 py-1"
       target="_blank"
       rel="noopener noreferrer"
       href={`https://www.websitecarbon.com/website/sadman.ca`}
     >
       {co2}g {ps.p1} CO<sub>2</sub>/{ps.p2}
-    </a><a
-      class="link text-gray-500 dark:text-gray-600"
+    </a>
+    <a
+      class="inline-flex items-center justify-center text-white bg-[#0e129e] dark:bg-[#02ffb4] dark:text-gray-800 font-bold border border-2 border-[#0e129e] dark:border-[#02ffb4] rounded-r-md px-2 py-1"
       target="_blank"
       rel="noopener noreferrer"
       href="https://websitecarbon.com"
@@ -106,7 +45,7 @@ const ps = dict.en;
       Website Carbon
     </a>
   </div>
-  <span class="percentage text-gray-500 dark:text-gray-600">
+  <span class="block mt-1 text-gray-500/80 dark:text-gray-500">
     {percentage
       ? parseInt(percentage) > 50
         ? `${ps.p3} ${percentage}% ${ps.p5}`
